fix(home): add rectangle to increase the click zone fix(global): admob only on mobile fix(ios): menu icon

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,14 @@
-ion-menu {
-  --width: 100vw;
+:host {
+  ion-menu {
+    --width: 100vw;
+    --max-width: none;
 
-  #menu {
-    height: calc(100vh - 4rem);
+    ion-content {
+      width: 100%;
+    }
+
+    #menu {
+      height: calc(100vh - 4rem);
+    }
   }
 }
