--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -24,6 +24,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      color: #000;
 
       &::before {
         line-height: 0.8;
